www/css/app.css
/* ... */
@media all and (min-width: 0px) {
  #afui .row-height-11 > .col > .content-area {
    min-height: 100px;
  }
}
.map-float-box {
  position: absolute;
  top: 50%;
  z-index: 2;
  color: white;
  width: 100%;
  letter-spacing: 1px;
  transform: scaleX(1);
  transition: 300ms;
  opacity: 1;
  text-align: center;
  margin-top: -100px;
}
.hide-float-box{
  transform: scaleX(0);
  opacity: 0;
}
.map-float-box span {
  background: #E1014D;
  padding: 3px;
  padding-right: 16px;
  border-radius: 26px;
  display: inline-flex;
  margin-left: auto;
  margin-right: auto;
  padding-left: 20px;
}

.map-float-box span a {
  color: white;
  text-decoration: none;
  display: inline-block;
  line-height: 26px;
}
.map-float-box span i.fa-chevron-right {
  border: 1px solid;
  border-radius: 23px;
  padding: 5px;
  margin-right: -13px;
  width: 26px;
  padding-left: 8px;
  float: right;
  margin-left: 10px;
}
.map-pin {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 30px;
  height: 40px;
  margin-top: -82px;
  margin-left: -16px;
  background: url('../images/pin2.png') no-repeat center center;
  background-size: 30px 40px;
  z-index: 1;
  pointer-events: none;
}

#pin2{
  margin-top: 0;
  top: 45px;
}
#map-footer{
  height: 100px;
  padding:20px;
  background: #f7f7f7 url(../images/bg.png) repeat center top;
}
.ui-slider .ui-slider-handle {
  display: block;
  text-decoration: none;
  outline:none;
  background-color: #f7f7f7;
  background-image: -webkit-gradient(linear, left top, left bottom, from(#f7f7f7), to(#e7e7e7));
  background-image: -webkit-linear-gradient(top, #f7f7f7, #e7e7e7); 
  background-image: -moz-linear-gradient(top, #f7f7f7, #e7e7e7); 
  background-image: -ms-linear-gradient(top, #f7f7f7, #e7e7e7); 
  background-image: -o-linear-gradient(top, #f7f7f7, #e7e7e7); 
  color: #a7a7a7;
  top: -18px;
  width: 40px;
  height: 40px;
  position: relative;
  text-align: center;
  line-height: 50px;
  border-radius: 50%;
  box-shadow: 0px 3px 8px #aaa, inset 0px 2px 3px #fff;
  border: solid 1px transparent;
}

.ui-state-active,.ui-widget-content .ui-state-active {
    box-shadow: 0px 3px 4px #56132A inset, 0px 2px 3px #fff !important;
    background: #E1014D !important;
}

.ui-slider-handle .ui-state-focus{
  border:0;
}
ul.slider_texto {
  list-style: none;
  font-size: 15px;
}
ul.slider_texto li {
  width: 50%;
  float: left;
  padding-left: 12px;
  text-align: left;  
}
div#slider,div#slider-manicure {
  margin-right: 38px;
  margin-left: 33px;
  margin-top: 45px;
}
ul.slider_texto li.op2 {
   text-align: right;
}
#mapa,#confirmacao-agora{
  overflow: hidden;
}

#map-canvas{
    height: calc(100vh - 146px);
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    transition: 500ms;
}
#map-canvas.full{
  height: calc(100vh - 50px);
}
.controls {
  margin-top: 10px;
  border: 1px solid transparent;
  border-radius: 2px 0 0 2px;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  height: 32px;
  outline: none;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
}

#pac-input {
  background-color: #fff;
  font-family: Roboto;
  font-size: 15px;
  font-weight: 300;
  padding: 0 11px 0 13px;
  text-overflow: ellipsis;
  margin:10px;
  width: 95vw;    
}

#pac-input:focus {
  border-color: #4d90fe;
}

.pac-container {
  font-family: Roboto;
}

#type-selector {
  color: #fff;
  background-color: #4d90fe;
  padding: 5px 11px 0px 11px;
}

#type-selector label {
  font-family: Roboto;
  font-size: 13px;
  font-weight: 300;
}
.col.last {padding-left: 10px}
.col2{ width: 50% }
.col4{width: 25% }
.col1-4{width: 25% }
.col2-4{width: 50% }
.col3-4{width: 75% }
.col3{width: 33.3% }
.col1-3{width:33.3% }
.col2-3{width:66% }

.confirmacao h1{
  font-size: 15px; 
  padding: 10px 0;
}

.confirmacao h1 i {
  margin-right: 10px;  
}
ul.no-chevron li >a:after{
  content:none;
}
#map-canvas2{
  height:160px;
  -webkit-user-select: none;
}
.vcenter-historico{
  margin-top: 50vh !important;
  text-align: center;
}
.list li:active {
    background: #E1014D;
    color:white;
}
label.error{
    width: 100%;
    font-size: 11px;
    text-align: left;
    color: red;
    padding: 5px 0px;
}

#countdown canvas{
  margin-left: auto;
  margin-right: auto;
  display: block;
}
#btn_digitalizar{
  margin: 0px 0px 11px;
  padding: 10px;
  width: 100%;
}
#btn_digitalizar .icon:before{
  top:0px;
}

.cartao-credito {
  padding: 10px 0px;
  margin-bottom: 10px;
  border: none;
  border-radius: 0;
  border-bottom: 1px solid #ccc;

}

.cartao-credito img{
  float: left;
}

.cartao-credito p{
  padding-top: 1px;
  padding-left: 42px;
}
.cartao-credito p.visa{
  background: url('../images/visa.png')no-repeat;
}

.cartao-credito p.mastercard{
  background: url('../images/mastercard.png')no-repeat;
}

.cartao-credito p.diners_clube{
  background: url('../images/diners_clube.png')no-repeat;
}

.cartao-credito p.elo{
  background: url('../images/elo.png')no-repeat;
}

#lista-servicos{
  margin-bottom: 100px;
}

.list-item{
  border-bottom: 1px solid #ccc;
}

#lista-servicos .list-item input[type="checkbox"] + label{
  float: left;
  margin-left: 20px;
}

#lista-servicos .list-item input[type="number"]{
  text-align: center;
}
#appversion{
  font-size: 12px;
  text-align: center;
}
select,
textarea,
input[type="text"],
input[type=search],
input[type="password"],
input[type="datetime"],
input[type="datetime-local"],
input[type="date"],
input[type="month"],
input[type="time"],
input[type="week"],
input[type="number"],
input[type="email"],
input[type="url"],
input[type="tel"],
input[type="color"],
.input-group  {
  background: inherit;
  color: inherit;
  border: none;
  border-radius: 0;
  border-bottom: 1px solid #ccc;
}
.star-ratings-sprite {
  background: url("../images/star-rating-sprite.png") repeat-x;
  font-size: 0;
  height: 21px;
  line-height: 0;
  overflow: hidden;
  text-indent: -999em;
  width: 110px;
  margin: 0 auto;
}
/* ... */

